--- a/templates/Project.html
+++ b/templates/Project.html
@@ -11,7 +11,7 @@ iOS Beta Deploy Server
 
 <ul id="list">
 {% for instance in instances %}
-    <li class="ui-state-default"><a href="{% url project_view project.bundle_identifier %}">
+    <li class="ui-state-default"><a href="{% url "project_view" instance.token %}">
         {{ project.name }} {{ instance.version }}(BN {{ instance.build_version }}) {{ instance.uploaded_date|date:"y/m/d h:m" }}</a>
     </li>
 {% endfor %}
