--- a/templates/Project.html
+++ b/templates/Project.html
@@ -11,7 +11,8 @@ iOS Beta Deploy Server
 
 <ul id="list">
 {% for instance in instances %}
-    <li class="ui-state-default"><a href="{% url "project_view" instance.token %}">
+    {% url "project_view" instance.token as instance_url %}
+    <li class="ui-state-default"><a href="itms-services://?action=download-manifest&url={{ instance_url|urlencode }}">
         {{ project.name }} {{ instance.version }}(BN {{ instance.build_version }}) {{ instance.create_date|date:"y/m/d h:m" }}</a>
     </li>
 {% endfor %}
