change email template

--- a/templates/Email.html
+++ b/templates/Email.html
@@ -15,5 +15,5 @@ iOS Beta
 </p>
 <p>If link is broken, <a href="http://{{ domain }}{% url "project_view" project.token %}">click this</a></p>
 <h2>Change List</h2>
-<p>{{ instance.description }}</p>
+<pre>{{ instance.description }}</pre>
 {% endblock %}
