--- a/iosbetadeploy/templates/_Base.html
+++ b/iosbetadeploy/templates/_Base.html
@@ -4,10 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-  <script src="/static/jquery-ui-1.10.3/jquery-1.9.1.js"></script>
-  <script src="/static/jquery-ui-1.10.3/ui/jquery-ui.js"></script>
-  <link rel="stylesheet" href="/static/jquery-ui-1.10.3/demos/demos.css" />
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.1/jquery.mobile-1.4.1.min.css">
+<script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="http://code.jquery.com/mobile/1.4.1/jquery.mobile-1.4.1.min.js"></script>
 {% block css %}{% endblock %}
     <style>
   #list { list-style-type: none; margin: 0; padding: 0; width: 60%; }
