--- a/iosbetadeploy/templates/Email.html
+++ b/iosbetadeploy/templates/Email.html
@@ -13,7 +13,7 @@ iOS Beta
 <p>Click on iOS Devices. <a href="itms-services://?action=download-manifest&url={{ domain }}{{ instance_url|urlencode }}">
     {{ project.name }} {{ instance.version }}(BN {{ instance.build_version }}) {{ instance.create_date|date:"y/m/d h:m" }}</a>
 </p>
-<p>If the link is broken, <a href="http://{{ domain }}{% url "project_view" project.token %}">click this</a></p>
+<p>If the link is broken, <a href="https://{{ domain }}{% url "project_view" project.token %}">click this</a></p>
 <h2>Change List</h2>
 <pre>{{ instance.description }}</pre>
 {% endblock %}
